# quantumchain

./: .gitignore  Cargo.toml  FEATURES.md  README.md  dashboard.html
backend/: README.md  app.js  index.html  package.json  server.js
cli/: Cargo.toml
cli/src/: main.rs  node.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  types.rs
core/src/ai/: mod.rs
core/src/bridge/: mod.rs
core/src/consensus/: abft.rs  dag.rs  mod.rs  poh.rs  pos.rs  validator.rs
core/src/crypto/: mod.rs  quantum_resistant.rs  zk_snarks.rs
core/src/defi/: mod.rs
core/src/governance/: mod.rs
core/src/network/: gossip.rs  mod.rs  p2p.rs  sync.rs
core/src/privacy/: mod.rs
core/src/rollups/: mod.rs
core/src/sharding/: mod.rs
core/src/storage/: db.rs  mod.rs  state.rs
core/src/vm/: evm_compat.rs  mod.rs  parallel_executor.rs  wasm_engine.rs
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
