[workspace]
members = [
    "core",
    "cli",
    "contracts",
    "sdk/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QuantumChain Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumchain/blockchain"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"
rand = "0.8"

# Networking
libp2p = { version = "0.53", features = ["tcp", "quic", "gossipsub", "kad", "identify"] }

# Database
rocksdb = "0.21"

# WASM
wasmi = "0.31"
wasmtime = "16.0"

# Zero-knowledge
ark-std = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
proptest = "1.4"
criterion = "0.5"
