[package]
name = "quantum-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "quantum-node"
path = "src/node.rs"

[[bin]]
name = "quantum-cli"
path = "src/main.rs"

[dependencies]
quantum-core = { path = "../core" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
